fix(main-screen): fix cursor visibility

--- a/src/components/GameCard.css
+++ b/src/components/GameCard.css
@@ -7,6 +7,7 @@
   border: 1px solid #ccc;
   border-radius: 10px;
   overflow: hidden;
+  background-color: black;
 }
 .game-card__title {
   font-size: 20px;
@@ -15,6 +16,7 @@
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   font-size: 1.5rem;
 }
+
 .game-card__image {
   width: 100%;
   height: 50%;
