--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: start;
-  /* background-color: black; */
+  background-color: black;
+  z-index: -1000;
 }
 
 a {
